[package]
name = "ghostpulse"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
openssl = "0.10"
rand = "0.8"
winapi = { version = "0.3", features = ["winuser", "wingdi", "processthreadsapi", "winbase", "mmsystem"] }
windows-sys = { version = "0.48", features = ["Win32_System_Console", "Win32_Media", "Win32_Media_Audio"] }
serde_json = "1.0"
base64 = "0.22"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
panic = "abort"
